--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,18 @@
     <string name="delete">ELIMINAR</string>
     <string name="edit">EDITAR</string>
     <string name="action_search">Buscar</string>
+    <string name="title_activity_add_upd_profesor">Profesores</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="nombreProfesor">Nombre</string>
+    <string name="emailProfesor">Email</string>
+    <string name="cedulaProfesor">Cedula</string>
+    <string name="telefonoProfesor">Telefono</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
