--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="title_activity_nav_drawer">Bienvenido</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Matricula</string>
+    <string name="nav_header_title">Matricula-Profesores-Cursos</string>
     <string name="nav_header_subtitle">2020</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
